chore: update style

--- a/packages/vant/src/pagination/index.less
+++ b/packages/vant/src/pagination/index.less
@@ -70,7 +70,7 @@
       cursor: pointer;
     }
 
-    &--border:first-child:after {
+    &--border:first-child::after {
       border-right-width: var(--van-border-width);
     }
 
