feat(RadioGroup): support shape prop on  radio-group

--- a/packages/vant/src/radio/index.less
+++ b/packages/vant/src/radio/index.less
@@ -76,7 +76,7 @@
         height: calc(100% - var(--van-radio-dot-size));
         width: calc(100% - var(--van-radio-dot-size));
         transition-duration: var(--van-radio-duration);
-        transition-property: border-color, background-color;
+        transition-property: background-color;
       }
     }
 
