--- a/packages/vant-cli/template/changelog-commit.hbs
+++ b/packages/vant-cli/template/changelog-commit.hbs
@@ -1,28 +1,11 @@
--{{#if scope}}
-  {{scope}}:
-{{~/if}}
-{{#if subject}}
+-{{#if scope}} {{scope}}:
+{{~/if}} {{#if subject}}
   {{~subject}}
 {{~else}}
   {{~header}}
 {{~/if}}
 {{#if references~}}
-  {{~#each references}}
-    [{{~this.repository}}#{{this.issue}}](
-    {{~#if @root.repository}}
-      {{~#if @root.host}}
-        {{~@root.host}}/
-      {{~/if}}
-      {{~#if @root.owner}}
-        {{~@root.owner}}/
-      {{~/if}}
-      {{~@root.repository}}
-    {{~else}}
-      {{~@root.repoUrl}}
-    {{~/if}}
-    /{{~@root.issue}}/{{this.issue}}){{/each}}
-{{~else}}
-  [{{shortHash}}](
+  {{~#each references}} [{{~this.repository}}#{{this.issue}}](
   {{~#if @root.repository}}
     {{~#if @root.host}}
       {{~@root.host}}/
@@ -34,5 +17,18 @@
   {{~else}}
     {{~@root.repoUrl}}
   {{~/if}}
-  /{{~@root.commit}}/{{hash}})
+/{{~@root.issue}}/{{this.issue}}){{/each}}
+{{~else}} [{{shortHash}}](
+{{~#if @root.repository}}
+  {{~#if @root.host}}
+    {{~@root.host}}/
+  {{~/if}}
+  {{~#if @root.owner}}
+    {{~@root.owner}}/
+  {{~/if}}
+  {{~@root.repository}}
+{{~else}}
+  {{~@root.repoUrl}}
+{{~/if}}
+/{{~@root.commit}}/{{hash}})
 {{~/if}}
