--- a/packages/vant-cli/template/changelog-header.hbs
+++ b/packages/vant-cli/template/changelog-header.hbs
@@ -10,4 +10,6 @@
 {{~else}}
   {{~@root.repoUrl}}
 {{~/if}}
-/compare/{{previousTag}}...{{currentTag}}) `{{date}}`
+/compare/{{previousTag}}...{{currentTag}})
+
+`{{date}}`
