chore: uploader-delelte-shadow reset border-radius.

--- a/packages/vant/src/uploader/index.less
+++ b/packages/vant/src/uploader/index.less
@@ -114,7 +114,7 @@
         width: var(--van-uploader-delete-icon-size);
         height: var(--van-uploader-delete-icon-size);
         background: var(--van-uploader-delete-background);
-        border-radius: var(--van-uploader-border-radius);
+        border-radius: 0 0 0 12px;
       }
 
       &-icon {
