feat(FloatingPanel): optimize bounce animate

--- a/packages/vant/src/floating-bubble/index.less
+++ b/packages/vant/src/floating-bubble/index.less
@@ -28,6 +28,7 @@
   color: var(--van-floating-bubble-color);
   border-radius: var(--van-floating-bubble-border-radius);
   z-index: var(--van-floating-bubble-z-index);
+  transition: transform var(--van-duration-base);
 
   &:active {
     opacity: 0.8;
