--- a/packages/vant-icons/src/common.less
+++ b/packages/vant-icons/src/common.less
@@ -1,7 +1,7 @@
 .van-icon {
   position: relative;
   display: inline-block;
-  font: normal normal normal 14px/1 var(--icon-font-family, 'vant-icon');
+  font: normal normal normal 14px/1 var(--van-icon-font-family, 'vant-icon');
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
