--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -48,6 +48,11 @@
     .van-field__left-icon {
       color: var(--van-search-left-icon-color);
     }
+
+    &.has-error-message {
+      height: auto;
+      align-items: flex-start;
+    }
   }
 
   &--show-action {
